--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="js/angular.js"></script>
     <script type="text/javascript" src="js/angular-route.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" media="screen" title="no title" charset="utf-8">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.min.js"></script>
 </head>
 <body ng-app="shoppingApp" ng-controller="shoppingCtrl">
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -27,7 +28,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">Register</a></li>
                     <li><a href="#">Login</a></li>
-                    <li><a href="#cart">My-cart</a></li>
+                    <li><a href="#cart" class="btn btn-info">Cart <span class="badge">{{ storage.cart.length }}</span></a></li>
                 </ul>
             </div>
         </div>
@@ -35,6 +36,7 @@
     <div class="container">
         <ng-view></ng-view>
     </div>
+    <footer><h4 class="text-center">This is footer</h4></footer>
     <script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
